--- a/introduction.tex
+++ b/introduction.tex
@@ -22,7 +22,7 @@ Automatically provided explanations are often expressed in terms of user or
 item similarity (i.e. ``we recommend you item X because you liked items Y and
 Z'') or even building a graph of user similarity\cite{hernando2013trees}
 without giving insight into the internal inferences being made (such as
-``we recommend you item X because we think that X is masculine and you like
+``we recommend you item X because we think that X is masculine, and you like
 masculine things''). While the gender-based targeting may or may not be seen as
 problematic in the context of movie recommendations, but it is very likely to be
 deemed problematic in the context of job recommendations, given the previous
