--- a/introduction.tex
+++ b/introduction.tex
@@ -1,12 +1,27 @@
 \chapter{Introduction}
 
+\pxm{Try not to have section without text of their own before a subsection begins.}
+
+\pxm{Try to restrict each paragraph to one major point. Split the paragraphs that make more than one point.}
+
+\pxm{A nice exercise is to annotate each paragraph with a
+  single-sentence summary. 
+  The thesis should then reasonably make sense if you only read the
+  paragraph summaries and nothing else.}
+
 \section{Motivation}
+
+\pxm{Add some discussion as to what makes a latent factor latent? 
+  A nice start is in the abstract.}
 
 The widespread adoption of machine learning systems that have opaque
 decision-making mechanisms has lead to a growing number of privacy and fairness
 concerns.
 
-Most notably, recommender systems based on matrix factorization
+\pxm{Summarize/introduce recommender systems and neural networks first
+  before going into the details.}
+
+Most notably\pxm{I wouldn't call it ``most notably''}, recommender systems based on matrix factorization
 input only the information about the behavior of users with regard to items
 being recommended (e.g. movies on a movie rating website, products in an
 online store) and from that they infer certain properties of the items and
@@ -24,7 +39,7 @@ Z'') or even building a graph of user similarity\cite{hernando2013trees}
 without giving insight into the internal inferences being made (such as
 ``we recommend you item X because we think that X is masculine, and you like
 masculine things''). While the gender-based targeting may or may not be seen as
-problematic in the context of movie recommendations, but it is very likely to be
+problematic in the context of movie recommendations, \pxm{wrong word:} but it is very likely to be
 deemed problematic in the context of job recommendations, given the previous
 history of controversies surrounding gendered targeting of job ads
 \cite{datta_tschantz_datta_2015}.
@@ -167,6 +182,7 @@ explanations for recommendations and mitigates bias.}
 
 \section{Related work}
 
+\pxm{Use this paragraph to organize/introduce what follows in this section.}
 As was mentioned above, multiple studies exist that have been exploring the
 area of this thesis.
 
