--- a/preamble.tex
+++ b/preamble.tex
@@ -1,7 +1,7 @@
 
 \usepackage[nocompress]{cite}
 %\usepackage{amsmath}
-\usepackage[pdftex]{graphicx, color}
+\usepackage[pdftex]{graphicx}
 \usepackage[top=1in, bottom=1in, left= 1in, right=1in]{geometry}
 \usepackage[cmex10]{amsmath}
 \interdisplaylinepenalty=2500
@@ -10,10 +10,14 @@
 \usepackage{caption}
 \usepackage{subcaption}
 \usepackage{float}
-\usepackage{epsfig,color, url}
+%\usepackage{epsfig}
+\usepackage{url}
+\usepackage{color}
 %\usepackage{array}
 \usepackage{multicol}
 \usepackage{multirow}
+
+\usepackage{soul}
 
 \linespread{1.5}
 %\IEEEoverridecommandlockouts
@@ -41,7 +45,7 @@
 \newtheorem{assumption}{Assumption}
 
 \newcommand*{\filter}[2]{\lfloor{#1}{\downarrow}{#2}\rfloor}
-\DeclareMathOperator{\st}{\,s.t.\,}
+%\DeclareMathOperator{\st}{\,s.t.\,}
 \newcommand{\msf}{\mathsf}
 \newcommand*{\given}{\mathop{{|}}}
 \newcommand{\doo}{\mathsf{do}}
